--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,13 @@
 		<dependency>
 			<groupId>com.nimbusds</groupId>
 			<artifactId>nimbus-jose-jwt</artifactId>
-			<version>[4.22,)</version>
+			<version>[4.24,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cryptomator</groupId>
+			<artifactId>siv-mode</artifactId>
+			<version>1.0.8</version>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.opensaml</groupId>
