--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
 		<dependency>
 			<groupId>org.cryptomator</groupId>
 			<artifactId>siv-mode</artifactId>
-			<version>1.0.8</version>
+			<version>[1.1.1,)</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
