--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
 		<dependency>
 			<groupId>net.minidev</groupId>
 			<artifactId>json-smart</artifactId>
-			<version>1.3.1</version>
+			<version>[1.3.1,2.3]</version>
 		</dependency>
 		<dependency>
 			<groupId>com.nimbusds</groupId>
@@ -85,7 +85,7 @@
 		<dependency>
 			<groupId>com.nimbusds</groupId>
 			<artifactId>nimbus-jose-jwt</artifactId>
-			<version>[4.29,)</version>
+			<version>[4.35,)</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cryptomator</groupId>
