--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,18 @@
 			<version>1.3.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.57</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk15on</artifactId>
+			<version>1.57</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
