--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
+				<version>3.7.0</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
@@ -136,7 +136,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.0</version>
+				<version>3.1.0</version>
 				<configuration>
 					<archive>
 						<manifestEntries>
@@ -156,7 +156,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.0.0</version>
+				<version>3.0.1</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -201,7 +201,7 @@
 				<version>2.5.3</version>
 				<configuration>
 					<useReleaseProfile>false</useReleaseProfile>
-					<releaseProfiles>jdk16, jdk17</releaseProfiles>
+					<releaseProfiles>jdk6, jdk7, jdk8, jdk10</releaseProfiles>
 					<goals>deploy</goals>
 				</configuration>
 			</plugin>
@@ -245,12 +245,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<version>2.22.0</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.5.0</version>
+				<version>3.5.1</version>
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
@@ -298,7 +298,7 @@
 	<profiles>
 
 		<profile>
-			<id>jdk16</id>
+			<id>jdk6</id>
 			<build>
 				<plugins>
 					<plugin>
@@ -308,7 +308,7 @@
                             on a JRE and not a JDK. -->
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
-						<version>3.5.1</version>
+						<version>3.7.0</version>
 						<configuration>
 							<source>1.7</source>
 							<target>1.6</target>
@@ -332,7 +332,7 @@
 									<goal>jar</goal>
 								</goals>
 								<configuration>
-									<classifier>jdk16</classifier>
+									<classifier>jdk6</classifier>
 								</configuration>
 							</execution>
 						</executions>
@@ -342,16 +342,63 @@
 		</profile>
 
 		<profile>
-			<id>jdk17</id>
+			<id>jdk7</id>
 			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
-						<version>3.5.1</version>
+						<version>3.7.0</version>
 						<configuration>
 							<source>1.7</source>
 							<target>1.7</target>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>jdk8</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.7.0</version>
+						<configuration>
+							<source>1.7</source>
+							<target>1.8</target>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>jdk10</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.7.0</version>
+						<configuration>
+							<source>1.7</source>
+							<target>10</target>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-jar-plugin</artifactId>
+						<version>3.0.2</version>
+						<configuration>
+							<archive>
+								<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+								<manifestEntries>
+									<Automatic-Module-Name>com.nimbusds.oauth2.sdk</Automatic-Module-Name>
+								</manifestEntries>
+							</archive>
 						</configuration>
 					</plugin>
 				</plugins>
