--- a/pom.xml
+++ b/pom.xml
@@ -126,12 +126,66 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
+				<version>3.5.1</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
+					<fork>true</fork>
 					<compilerArgument>-Xlint</compilerArgument>
 				</configuration>
+				<dependencies>
+					<!-- Using the eclipse compiler allows for different source and target,
+                            which is a good thing (outweighing that this is a rarely used combination,
+                            and most people use javac) This should also allow us to run maven builds
+                            on a JRE and not a JDK. -->
+					<dependency>
+						<groupId>org.codehaus.plexus</groupId>
+						<artifactId>plexus-compiler-eclipse</artifactId>
+						<version>2.5</version>
+					</dependency>
+				</dependencies>
+				<executions>
+					<execution>
+						<id>default-compile</id>
+					</execution>
+					<execution>
+						<id>jdk6-compile</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+						<configuration>
+							<source>1.7</source>
+							<target>1.6</target>
+							<compilerId>eclipse</compilerId>
+							<outputDirectory>${project.build.outputDirectory}_jdk6</outputDirectory>
+						</configuration>
+					</execution>
+					<execution>
+						<id>jdk8-compile</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+						<configuration>
+							<source>1.7</source>
+							<target>1.8</target>
+							<outputDirectory>${project.build.outputDirectory}_jdk8</outputDirectory>
+						</configuration>
+					</execution>
+					<execution>
+						<id>jdk10-compile</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+						<configuration>
+							<source>1.7</source>
+							<target>10</target>
+							<outputDirectory>${project.build.outputDirectory}_jdk10</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -152,6 +206,47 @@
 						</manifest>
 					</archive>
 				</configuration>
+				<executions>
+					<execution>
+						<id>default-jar</id>
+					</execution>
+					<execution>
+						<id>jdk6-jar</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<configuration>
+							<classesDirectory>${project.build.outputDirectory}_jdk6</classesDirectory>
+							<classifier>jdk6</classifier>
+						</configuration>
+					</execution>
+					<execution>
+						<id>jdk8-jar</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<configuration>
+							<classesDirectory>${project.build.outputDirectory}_jdk8</classesDirectory>
+							<classifier>jdk8</classifier>
+						</configuration>
+					</execution>
+					<execution>
+						<id>jdk10-jar</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<configuration>
+							<archive>
+								<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+								<manifestEntries>
+									<Automatic-Module-Name>com.nimbusds.oauth2.sdk</Automatic-Module-Name>
+								</manifestEntries>
+							</archive>
+							<classesDirectory>${project.build.outputDirectory}_jdk10</classesDirectory>
+							<classifier>jdk10</classifier>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -201,7 +296,6 @@
 				<version>2.5.3</version>
 				<configuration>
 					<useReleaseProfile>false</useReleaseProfile>
-					<releaseProfiles>jdk6, jdk7, jdk8, jdk10</releaseProfiles>
 					<goals>deploy</goals>
 				</configuration>
 			</plugin>
@@ -295,156 +389,4 @@
 		</repository>
 	</distributionManagement>
 
-	<profiles>
-
-		<profile>
-			<id>jdk6</id>
-			<build>
-				<plugins>
-					<plugin>
-						<!-- Using the eclipse compiler allows for different source and target,
-                            which is a good thing (outweighing that this is a rarely used combination,
-                            and most people use javac) This should also allow us to run maven builds
-                            on a JRE and not a JDK. -->
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<version>3.8.0</version>
-						<configuration>
-							<source>1.7</source>
-							<target>1.6</target>
-							<fork>true</fork>
-							<compilerId>eclipse</compilerId>
-						</configuration>
-						<dependencies>
-							<dependency>
-								<groupId>org.codehaus.plexus</groupId>
-								<artifactId>plexus-compiler-eclipse</artifactId>
-								<version>2.5</version>
-							</dependency>
-						</dependencies>
-					</plugin>
-					<plugin>
-						<artifactId>maven-jar-plugin</artifactId>
-						<executions>
-							<execution>
-								<phase>package</phase>
-								<goals>
-									<goal>jar</goal>
-								</goals>
-								<configuration>
-									<classifier>jdk6</classifier>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>jdk7</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<version>3.8.0</version>
-						<configuration>
-							<source>1.7</source>
-							<target>1.7</target>
-						</configuration>
-					</plugin>
-					<plugin>
-						<artifactId>maven-jar-plugin</artifactId>
-						<executions>
-							<execution>
-								<phase>package</phase>
-								<goals>
-									<goal>jar</goal>
-								</goals>
-								<configuration>
-									<classifier>jdk7</classifier>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>jdk8</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<version>3.8.0</version>
-						<configuration>
-							<source>1.7</source>
-							<target>1.8</target>
-						</configuration>
-					</plugin>
-					<plugin>
-						<artifactId>maven-jar-plugin</artifactId>
-						<executions>
-							<execution>
-								<phase>package</phase>
-								<goals>
-									<goal>jar</goal>
-								</goals>
-								<configuration>
-									<classifier>jdk8</classifier>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>jdk10</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<version>3.8.0</version>
-						<configuration>
-							<source>1.7</source>
-							<target>10</target>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-jar-plugin</artifactId>
-						<version>3.0.2</version>
-						<configuration>
-							<archive>
-								<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-								<manifestEntries>
-									<Automatic-Module-Name>com.nimbusds.oauth2.sdk</Automatic-Module-Name>
-								</manifestEntries>
-							</archive>
-						</configuration>
-					</plugin>
-					<plugin>
-						<artifactId>maven-jar-plugin</artifactId>
-						<executions>
-							<execution>
-								<phase>package</phase>
-								<goals>
-									<goal>jar</goal>
-								</goals>
-								<configuration>
-									<classifier>jdk10</classifier>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 </project>
