Updates dev email in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 		<developer>
 			<id>vdzhuvinov</id>
 			<name>Vladimir Dzhuvinov</name>
-			<email>vladimir@dzhuvinov.com</email>
+			<email>vd@connect2id.com</email>
 		</developer>
 	</developers>
 
