--- a/pom.xml
+++ b/pom.xml
@@ -350,6 +350,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.0</version>
+				<configuration>
+					<!-- Remove when fixed: https://issues.apache.org/jira/browse/SUREFIRE-1588 -->
+					<useSystemClassLoader>false</useSystemClassLoader>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
