--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.nimbusds</groupId>
 	<artifactId>oauth2-oidc-sdk</artifactId>
-	<version>6.10-SNAPSHOT</version>
+	<version>6.10</version>
 	<packaging>jar</packaging>
 
 	<name>OAuth 2.0 SDK with OpenID Connect extensions</name>
@@ -33,7 +33,7 @@
 		<connection>scm:git:https://bitbucket.org/connect2id/oauth-2.0-sdk-with-openid-connect-extensions.git</connection>
 		<developerConnection>scm:git:git@bitbucket.org:connect2id/oauth-2.0-sdk-with-openid-connect-extensions.git</developerConnection>
 		<url>https://bitbucket.org/connect2id/oauth-2.0-sdk-with-openid-connect-extensions</url>
-		<tag>HEAD</tag>
+		<tag>6.10</tag>
 	</scm>
 
 	<developers>
@@ -276,7 +276,8 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.0.1</version>
 				<configuration>
-					<author>true</author>
+                    <source>8</source>
+                    <author>true</author>
 					<version>true</version>
 					<use>true</use>
 					<linksource>true</linksource>
