--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,19 @@
 		<dependency>
 			<groupId>com.nimbusds</groupId>
 			<artifactId>nimbus-jose-jwt</artifactId>
-			<version>8.6</version>
+			<version>8.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.64</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk15on</artifactId>
+			<version>1.64</version>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.cryptomator</groupId>
@@ -121,18 +133,6 @@
 			<groupId>net.jadler</groupId>
 			<artifactId>jadler-all</artifactId>
 			<version>1.3.0</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcprov-jdk15on</artifactId>
-			<version>1.60</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcpkix-jdk15on</artifactId>
-			<version>1.60</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
