--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.nimbusds</groupId>
 	<artifactId>oauth2-oidc-sdk</artifactId>
-	<version>7.3-SHAPSHOT</version>
+	<version>7.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>OAuth 2.0 SDK with OpenID Connect extensions</name>
