--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
 			<version>8.18</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.crypto.tink</groupId>
+			<artifactId>tink</artifactId>
+			<version>1.2.2</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcprov-jdk15on</artifactId>
 			<version>1.65</version>
