--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.nimbusds</groupId>
 	<artifactId>oauth2-oidc-sdk</artifactId>
-	<version>8.35-SNAPSHOT</version>
+	<version>8.34.1</version>
 	<packaging>jar</packaging>
 
 	<name>OAuth 2.0 SDK with OpenID Connect extensions</name>
@@ -33,7 +33,7 @@
 		<connection>scm:git:https://bitbucket.org/connect2id/oauth-2.0-sdk-with-openid-connect-extensions.git</connection>
 		<developerConnection>scm:git:git@bitbucket.org:connect2id/oauth-2.0-sdk-with-openid-connect-extensions.git</developerConnection>
 		<url>https://bitbucket.org/connect2id/oauth-2.0-sdk-with-openid-connect-extensions</url>
-		<tag>HEAD</tag>
+		<tag>8.34.1</tag>
 	</scm>
 
 	<developers>
