--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	<repositories>
+		<repository>
+			<id>shibboleth-repo</id>
+			<name>Shibboleth repo for OpenSAML dependencies</name>
+			<url>https://build.shibboleth.net/nexus/content/repositories/releases/</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.github.stephenc.jcip</groupId>
@@ -101,19 +109,19 @@
 		<dependency>
 			<groupId>org.opensaml</groupId>
 			<artifactId>opensaml-core</artifactId>
-			<version>3.4.5</version>
+			<version>3.4.6</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.opensaml</groupId>
 			<artifactId>opensaml-saml-api</artifactId>
-			<version>3.4.5</version>
+			<version>3.4.6</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.opensaml</groupId>
 			<artifactId>opensaml-saml-impl</artifactId>
-			<version>3.4.5</version>
+			<version>3.4.6</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
