Updates pom.xml to include javax.servlet 4.0 API in OSGI manifest (iss #354)

--- a/pom.xml
+++ b/pom.xml
@@ -359,7 +359,7 @@
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Version>${project.version}</Bundle-Version>
 						<Export-Package>com.nimbusds.oauth2.*;version=${project.version},com.nimbusds.openid.*;version=${project.version}</Export-Package>
-						<Import-Package>*</Import-Package>
+						<Import-Package>javax.servlet;version="3.0",javax.servlet.http;version="3.0",*</Import-Package>
 					</instructions>
 				</configuration>
 				<executions>
