--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
 			<groupId>com.github.stephenc.jcip</groupId>
 			<artifactId>jcip-annotations</artifactId>
 			<version>1.0-1</version>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.nimbusds</groupId>
