Remove unicode left to right mark at the end of license url link
This mark is visible when open `pom.xml` in IntelliJ.

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 	<licenses>
 		<license>
 			<name>Apache License, version 2.0</name>
-			<url>https://www.apache.org/licenses/LICENSE-2.0.html‎</url>
+			<url>https://www.apache.org/licenses/LICENSE-2.0.html</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
