--- a/pom.xml
+++ b/pom.xml
@@ -135,14 +135,14 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<!-- Transient dep of OpenSAML, bump to more secure -->
+			<!-- Transitive dep of OpenSAML, bump to more secure -->
 			<groupId>org.apache.santuario</groupId>
 			<artifactId>xmlsec</artifactId>
 			<version>2.1.7</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<!-- Transient dep of OpenSAML, bump to more secure -->
+			<!-- Transitive dep of OpenSAML, bump to more secure -->
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>31.0.1-jre</version>
